--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,6 @@
 run-shell "powerline-daemon -q"
 source "$HOME/powerline/bindings/tmux/powerline.conf"
 
+set -g default-terminal "screen-256color"
+
+set -sg escape-time 0
