--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,5 @@
 run-shell "powerline-daemon -q"
 source "$HOME/powerline/bindings/tmux/powerline.conf"
 
-set -g default-terminal "screen-256color"
-
+set -g default-terminal "xterm-kitty"
 set -sg escape-time 0
