--- a/tmuxinator/wespline.yml
+++ b/tmuxinator/wespline.yml
@@ -1,7 +1,7 @@
 # ~/.tmuxinator/wespline.yml
 
 name: wespline
-root: ~/PycharmProjects/wespline/wespline
+root: ~/Code/wespline/wespline
 
 # Optional tmux socket
 # socket_name: foo
@@ -10,7 +10,7 @@ root: ~/PycharmProjects/wespline/wespline
 
 # Project hooks
 # Runs on project start, always
-on_project_start: source ~/wespline_start.sh
+on_project_start: ( cd ~/Code/machines/vagrant && vagrant up search )
 # Run on project start, the first time
 # on_project_first_start: command
 # Run on project start, after the first time
@@ -21,7 +21,7 @@ on_project_start: source ~/wespline_start.sh
 # on_project_stop: command
 
 # Runs in each window and pane before window/pane specific commands. Useful for setting up interpreter versions.
-pre_window: source ~/VirtualEnvs/WeSplineEnv/bin/activate && source ~/Code/WeSpline/.env
+pre_window: source ~/Code/wespline/.venv/bin/activate && source ~/Code/wespline/.env
 
 # Pass command line options to tmux. Useful for specifying a different tmux.conf.
 # tmux_options: -f ~/.tmux.mac.conf
